--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "check": "tsc",
     "compile": "esbuild --minify --sourcemap --outfile=output.min.js script.ts",
     "dev": "tailwindcss -i input.css -o output.min.css --minify --watch",
-    "format": "prettier --plugin-search-dir=. --write .",
+    "format": "prettier --plugin prettier-plugin-tailwindcss --write .",
     "lint": "eslint --fix .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
-    "esbuild": "^0.18.15",
-    "eslint": "^8.45.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.4.1",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "esbuild": "^0.19.5",
+    "eslint": "^8.53.0",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
