--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "esbuild": "^0.19.5",
-    "eslint": "^8.53.0",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "@eslint/js": "^9.8.0",
+    "@types/eslint__js": "^8.42.3",
+    "esbuild": "^0.23.0",
+    "eslint": "^9.8.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "8.0.0-alpha.60"
   }
 }
